drop old dependencies

--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,10 @@ Vcs-Git: https://github.com/droidian-devices/adaptation-droidian-miatoll.git
 Package: adaptation-xiaomi-miatoll
 Architecture: arm64
 Depends: ${misc:Depends},
-         lxc-android (>= 1:9),
-         ofono-scripts,
          linux-bootimage-xiaomi-miatoll,
          adaptation-hybris-api29-phone,
          adaptation-miatoll-configs,
-         callaudiod,
+         libqt5core5a,
          batman
 Description: adapatation-xiaomi-miatoll- meta
  Miatoll api29 adaptation metapackage
