--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,9 @@ Depends: ${misc:Depends},
          linux-bootimage-xiaomi-miatoll,
          adaptation-hybris-api29-phone,
          adaptation-miatoll-configs,
-         batman
+         batman,
+         qt5-cameraplugin-aal,
+         qtmultimedia5-examples
 Description: adapatation-xiaomi-miatoll- meta
  Miatoll api29 adaptation metapackage
 
