--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,7 @@ Depends: ${misc:Depends},
          linux-bootimage-xiaomi-miatoll,
          adaptation-hybris-api29-phone,
          adaptation-miatoll-configs,
-         qt5-cameraplugin-aal,
-         qtmultimedia5-examples
+         droidian-camera,
 Description: adapatation-xiaomi-miatoll- meta
  Miatoll api29 adaptation metapackage
 
