--- a/debian/rules
+++ b/debian/rules
@@ -6,3 +6,4 @@
 override_dh_installsystemd:
 	dh_installsystemd -padaptation-miatoll-configs --name=enable-ipa enable-ipa.service --no-start
 	dh_installsystemd -padaptation-miatoll-configs --name=miatoll-postboot miatoll-postboot.service --no-start
+	dh_installsystemd -padaptation-miatoll-configs --name=droidian-perf droidian-perf.service --no-start
