add camera-hal-force and gstreamer1.0-tools
on miatoll camera hal crashes on startup first time it gets accessed making users have to open and close the camera 2-3 times at each boot for it to start working. this solution is a hack and is not very good but better than users having to open and close camera a few times at each boot

--- a/debian/adaptation-miatoll-configs.miatoll-postboot.service
+++ b/debian/adaptation-miatoll-configs.miatoll-postboot.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Enable wlan at boot
+Description=Hacks that have to be applied on boot for miatoll
 Requires=lxc@android.service
 
 [Service]
@@ -7,6 +7,7 @@ Type=oneshot
 Environment=LAUNCHED_BY_SYSTEMD=1
 ExecStartPre=/bin/sleep 5
 ExecStart=/usr/bin/miatoll-postboot.sh
+ExecStartPost=/usr/bin/camera-hal-force
 
 [Install]
 WantedBy=multi-user.target
