--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Depends: ${misc:Depends},
          adaptation-hybris-api29-phone,
          adaptation-miatoll-configs,
          droidian-camera,
+         gstreamer1.0-tools,
 Description: adapatation-xiaomi-miatoll- meta
  Miatoll api29 adaptation metapackage
 
