debian: Prepare enabling ofono-configs-binder-dual-sim

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Depends: ${misc:Depends},
          adaptation-miatoll-configs,
          ofono-binder-plugin,
          ofono-configs-binder-common,
+#ofono-configs-binder-dual-sim,
          droidian-camera,
          gstreamer1.0-tools,
          mobile-power-saver,
