--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Depends: ${misc:Depends},
          droidian-camera,
          gstreamer1.0-tools,
          mobile-power-saver,
+         fpd-unlock,
          battery-input-manager
 Description: adapatation-xiaomi-miatoll- meta
  Miatoll api29 adaptation metapackage
