--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,7 @@ Depends: ${misc:Depends},
          gstreamer1.0-tools,
          mobile-power-saver,
          fpd-unlock,
-         miatoll-quirks,
+         mobile-quirks,
          mobile-settings,
          battery-input-manager
 Description: adapatation-xiaomi-miatoll- meta
