services: Rename droidian-perf.service to miatoll-preboot.service

--- a/debian/rules
+++ b/debian/rules
@@ -5,5 +5,5 @@
 
 override_dh_installsystemd:
 	dh_installsystemd -padaptation-miatoll-configs --name=enable-ipa enable-ipa.service --no-start
+	dh_installsystemd -padaptation-miatoll-configs --name=miatoll-preboot miatoll-preboot.service --no-start
 	dh_installsystemd -padaptation-miatoll-configs --name=miatoll-postboot miatoll-postboot.service --no-start
-	dh_installsystemd -padaptation-miatoll-configs --name=droidian-perf droidian-perf.service --no-start
