systemd: Add services to system-background/background cpuset

--- a/usr/lib/systemd/system/miatoll-postboot.service
+++ b/usr/lib/systemd/system/miatoll-postboot.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Hacks that have to be applied on boot for miatoll
+Description=Script run after boot process
 Requires=lxc@android.service
 
 [Service]
