--- a/debian/control
+++ b/debian/control
@@ -32,3 +32,8 @@ Provides: getcutout, getoverlay, miatoll-settings
 Replaces: getcutout, getoverlay, miatoll-settings
 Conflicts: getcutout, getoverlay, miatoll-settings
 Description: Miatoll's specific adaptation configs
+
+Package: adaptation-miatoll-android
+Architecture: all
+Depends: ${misc:Depends},
+Description: Miatoll's specific adaptation for Android. This will disable many Android binaries, remove me if something breaks.
