debian: Add adaptation-miatoll-keyboard-fr

--- a/debian/control
+++ b/debian/control
@@ -37,3 +37,8 @@ Package: adaptation-miatoll-android
 Architecture: all
 Depends: ${misc:Depends},
 Description: Miatoll's specific adaptation for Android. This will disable many Android binaries, remove me if something breaks.
+
+Package: adaptation-miatoll-keyboard-fr
+Architecture: all
+Depends: squeekboard
+Description: Miatoll's specific adaptation for french Keyboard.
